done html changes

--- a/index.html
+++ b/index.html
@@ -2,12 +2,26 @@
 <head></head>
 <body>
 <form action="index.php" method="post">
-    Select <input type="text" name="select"/><br />
-    from <input type="text" name="from"/><br />
-    where <input type="text" name="where"/><br />
-    limit <input type="text" name="limit"/><br />
-    order by <input type="text" name="orderBy"/><br />
-     <input type="submit" name="submit"/>
+    <table>
+        <tr>
+            <td>Select</td> <td><input type="text" name="select"/></td>
+        </tr>
+        <tr>
+            <td>from</td><td><input type="text" name="from"/></td>
+        </tr>
+        <tr>
+            <td>where</td><td><input type="text" name="where"/></td>
+        </tr>
+        <tr>
+            <td>limit </td><td><input type="text" name="limit"/></td>
+        </tr>
+        <tr>
+            <td> order by </td> <td><input type="text" name="orderBy"/></td>
+        </tr>
+        <tr>
+            <td colspan="2" align='center'><input type="submit" name="submit"/></td>
+        </tr>
+    </table>
 </form>
 
 </body>
