--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <body>
 <form action="index.php" method="post">
     <table>
-       <!-- <tr>
+        <tr>
             <td>Select</td> <td><input type="text" name="select"/></td>
         </tr>
         <tr>
@@ -17,16 +17,16 @@
         </tr>
         <tr>
             <td> order by </td> <td><input type="text" name="orderBy"/></td>
-        </tr>-->
-        <tr>
-            <td>Table name</td> <td><input type="text" name="tableName"/></td>
         </tr>
-        <tr>
-            <td>Values</td> <td><input type="text" name="values"/></td>
-        </tr>
-        <tr>
-            <td>Conditions(update)</td><td><input type="text" name="conditions"/></td>
-        </tr>
+        <!--<tr>-->
+            <!--<td>Table name</td> <td><input type="text" name="tableName"/></td>-->
+        <!--</tr>-->
+        <!--<tr>-->
+            <!--<td>Values</td> <td><input type="text" name="values"/></td>-->
+        <!--</tr>-->
+        <!--<tr>-->
+            <!--<td>Conditions(update)</td><td><input type="text" name="conditions"/></td>-->
+        <!--</tr>-->
         <tr>
             <td colspan="2" align='center'><input type="submit" name="submit"/></td>
         </tr>
